--- a/nodespec.yaml
+++ b/nodespec.yaml
@@ -1,22 +1,18 @@
-version: 0.2
-phases:
-  install:
-    runtime-versions:
-      nodejs: 14
-    commands:
-      - echo Installing
-  pre_build:
-    commands:
-      - echo Installing source NPM dependencies.
-      - npm install
-  build:
-    commands:
-      - echo Build started on `date`
-      - echo Compiling the Node.js code
-      - npm run build
-  post_build:
-    commands:
-      - echo Build completed on `date`
-  artifacts:
-     files:
-      - '**/*'
+version: 0.0
+os: linux
+files:
+  - source: /
+    destination: /var/www/html
+hooks:
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ec2-user
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ec2-user
+  ApplicationStart:
+    - location: scripts/application_start.sh
+      timeout: 300
+      runas: ec2-user
